# System-Activity-Monitor

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  monitor
Test/: CMakeLists.txt  DiskRateTest.cpp  test.cpp
include/: format.h  linux_parser.h  ncurses_display.h  process.h  processor.h  system.h
src/: format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
